RESOLVED FIXED100771
Web Inspector: frame chooser does not work on subsequent inspector open.
https://bugs.webkit.org/show_bug.cgi?id=100771
Summary Web Inspector: frame chooser does not work on subsequent inspector open.
Pavel Feldman
Reported 2012-10-30 10:16:03 PDT
The problem is that we reset the didCommitLoad flag upon inspector close.
Attachments
Patch (1.36 KB, patch)
2012-10-30 10:20 PDT, Pavel Feldman
no flags
Patch (19.06 KB, patch)
2012-10-31 02:00 PDT, Pavel Feldman
no flags
[Patch] for landing (22.09 KB, patch)
2012-10-31 08:42 PDT, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2012-10-30 10:20:46 PDT
Pavel Feldman
Comment 2 2012-10-31 02:00:50 PDT
Pavel Feldman
Comment 3 2012-10-31 05:41:23 PDT
WebKit Review Bot
Comment 4 2012-10-31 06:15:49 PDT
Re-opened since this is blocked by bug 100847
Pavel Feldman
Comment 5 2012-10-31 08:42:41 PDT
Created attachment 171665 [details] [Patch] for landing
WebKit Review Bot
Comment 6 2012-10-31 11:46:05 PDT
Comment on attachment 171665 [details] [Patch] for landing Clearing flags on attachment: 171665 Committed r133052: <http://trac.webkit.org/changeset/133052>
WebKit Review Bot
Comment 7 2012-10-31 11:46:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.