third_party/WebKit/Source/WebCore/inspector/InspectorRuntimeAgent.cpp
@@ -38,11 +38,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "InjectedScript.h"
 #include "InjectedScriptManager.h"
 #include "InspectorValues.h"
-#include "InstrumentingAgents.h"
-#include "WorkerContext.h"
-#include "WorkerDebuggerAgent.h"
-#include "WorkerRunLoop.h"
-#include "WorkerThread.h"
 #include <wtf/PassRefPtr.h>
 
 
@@ -64,14 +59,11 @@ InspectorRuntimeAgent::InspectorRuntimeAgent(InstrumentingAgents* instrumentingA
 #if ENABLE(JAVASCRIPT_DEBUGGER)
     , m_scriptDebugServer(0)
 #endif
-    , m_paused(false)
 {
-    m_instrumentingAgents->setInspectorRuntimeAgent(this);
 }
 
 InspectorRuntimeAgent::~InspectorRuntimeAgent()
 {
-    m_instrumentingAgents->setInspectorRuntimeAgent(0);
 }
 
 #if ENABLE(JAVASCRIPT_DEBUGGER)
@@ -173,7 +165,6 @@ void InspectorRuntimeAgent::releaseObjectGroup(ErrorString*, const String& objec
 
 void InspectorRuntimeAgent::run(ErrorString*)
 {
-    m_paused = false;
 }
 
 #if ENABLE(JAVASCRIPT_DEBUGGER)
@@ -181,18 +172,6 @@ void InspectorRuntimeAgent::setScriptDebugServer(ScriptDebugServer* scriptDebugS
 {
     m_scriptDebugServer = scriptDebugServer;
 }
-
-#if ENABLE(WORKERS)
-void InspectorRuntimeAgent::pauseWorkerContext(WorkerContext* context)
-{
-    m_paused = true;
-    MessageQueueWaitResult result;
-    do {
-        result = context->thread()->runLoop().runInMode(context, WorkerDebuggerAgent::debuggerTaskMode);
-    // Keep waiting until execution is resumed.
-    } while (result == MessageQueueMessageReceived && m_paused);
-}
-#endif // ENABLE(WORKERS)
 #endif // ENABLE(JAVASCRIPT_DEBUGGER)
 
 } // namespace WebCore
