third_party/WebKit/Source/WebCore/inspector/InspectorRuntimeAgent.h
@@ -86,9 +86,6 @@ public:
 
 #if ENABLE(JAVASCRIPT_DEBUGGER)
     void setScriptDebugServer(ScriptDebugServer*);
-#if ENABLE(WORKERS)
-    void pauseWorkerContext(WorkerContext*);
-#endif
 #endif
 
 protected:
@@ -106,7 +103,6 @@ private:
 #if ENABLE(JAVASCRIPT_DEBUGGER)
     ScriptDebugServer* m_scriptDebugServer;
 #endif
-    bool m_paused;
 };
 
 } // namespace WebCore
